# replayslol-redditbot

./: .env.example  .gitignore  Errors.py  README.md  RedditBot.py  RedditBotHelpers.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  seutp.cfg  test_cases.json  tests.py  tox.ini
.github/workflows/: tests.yml
src/ReplaysLolRedditBot/: Bot.py  Helpers.py  RedditScraper.py  ReplaysLolRedditBot.py  Scraper.py  config.yaml
src/replays_lol_reddit_scraper/: ExtendedRedditSubmission.py
src/replayslol-reddit-scraper/: Credentials.py  ExtendedRedditSubmission.py  Helpers.py  RedditScraper.py  Scraper.py  ScraperFunction.py  config-backup.yaml  config.yaml
src/replayslol_reddit_scraper/: config.yaml  extended_reddit_submission.py  reddit_scraper.py  scraper.py  scraper_function.py  url_element_extractor.py
tests/: test_ReplaysLolRedditBot.py  test_URLElementExtractor.py  test_config.yaml  test_data.json  test_extract_region.py  test_extract_summoner.py  test_matching_link.py  tests.py
