[metadata]
name = replayslol-reddit-scraper
description = RedditBot to scrape comments containing LoL statistics website links
author = George Thomas
classifiers = Programming Language :: Python :: 3.11

[options]
packages =
    replayslol_reddit_scraper
install_requires =
    beautifulsoup4==4.12.2
    praw==7.7.1
    psycopg2<=2.9.9
    python-dotenv==1.0.0
    pytest==7.4.3
    pyyaml==6.0.1
    requests>=2.31.0
    pika~=1.3.1
    setuptools==69.0.2
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=5.0.4
    tox>=3.25.1
    pytest>=7.1.2
    pytest-cov>=3.0.0
    pyyaml==6.0
    praw==7.6.0
    python-dotenv==0.20.0
    requests==2.32.0

[flake8]
max-line-length = 160

[options.package_data]
replayslol-reddit-scraper = py.typed
